Fix stray div on mobile

--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -459,7 +459,7 @@ section.main {
     position: relative;
     top: 0px;
     opacity: 0;
-    margin: 15px 0;
+    margin: 45px 0;
     -webkit-animation-delay: .9s;
     -webkit-animation-duration: 1s;
     -webkit-animation-name: fade-out;
@@ -476,11 +476,11 @@ section.main {
     animation-duration: 1s;
     animation-name: fade-out;
     animation-fill-mode: forwards;
-    -webkit-box-ordinal-group: 3;
-    -webkit-order: 2;
-    -moz-order: 2;
-    -ms-flex-order: 2;
-    order: 2;
+    -webkit-box-ordinal-group: 5;
+    -webkit-order: 4;
+    -moz-order: 4;
+    -ms-flex-order: 4;
+    order: 4;
 }
 
 @media screen and (min-width: 768px) {
